[package]
name = "frameql"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
frameql-ast = { "path" = "../ast" }
frameql-parser = { "path" = "../parser" }
frameql-compiler = { "path" = "../compiler" }
ordered-float = { version = "4.0", default-features = false }
petgraph = "0.8.2"
